--- a/Source/TreasureGuide.Web/Views/GCR/Index.cshtml
+++ b/Source/TreasureGuide.Web/Views/GCR/Index.cshtml
@@ -15,8 +15,8 @@
 <div class="gcr">
     <div class="header">
         <div class="_floatRight buttons">
-            <a href="/gcr/missing" class="button _xsmall _info" target="_blank">Export "Missing" Table</a>
-            <a href="/gcr/edit" class="button _xsmall _info" target="_blank">Edit Stages and Units</a>
+            <a href="/gcr/missing" class="button _small _info" target="_blank">Export "Missing" Table</a>
+            <a href="/gcr/edit" class="button _small _info" target="_blank">Edit Stages and Units</a>
         </div>
         <h2>
            GCR
