--- a/Source/TreasureGuide.Web/src/css/gcr.scss
+++ b/Source/TreasureGuide.Web/src/css/gcr.scss
@@ -29,7 +29,8 @@ $gcr-cell-height: 24px;
         height: 5vh;
 
         .buttons {
-            padding: 10px;
+            padding-top: 10px;
+            padding-right: 10px;
         }
     }
 
