Finishing editor and adding baseline data.

--- a/Source/TreasureGuide.Web/Views/GCR/Index.cshtml
+++ b/Source/TreasureGuide.Web/Views/GCR/Index.cshtml
@@ -61,7 +61,7 @@
                                 {
                                     <i class="fa fa-fw fa-map"></i>
                                 }
-                                @(GCRHelper.GetShortStageName(stage.Name))
+                                @(stage.Name)
                             </a>
                         </th>
                         @foreach (var unit in Model.Units)
