--- a/Source/TreasureGuide.Web/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/Source/TreasureGuide.Web/Views/Account/ExternalLoginConfirmation.cshtml
@@ -60,7 +60,7 @@
         </fieldset>
     </div>
     <div class="row">
-        <button class="button _primary _floatRight" type="submit">
+        <button type="submit" class="button _primary _floatRight" type="submit">
             Register
         </button>
     </div>
