Fixing some model imports.

--- a/Source/TreasureGuide.Web/Views/Account/_ViewImports.cshtml
+++ b/Source/TreasureGuide.Web/Views/Account/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using TreasureGuide.Web
 @using TreasureGuide.Common.Models
+@using TreasureGuide.Web.Models
 @using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
