Updating support and donate pages.

--- a/Source/TreasureGuide.Web/src/views/support/index.html
+++ b/Source/TreasureGuide.Web/src/views/support/index.html
@@ -58,8 +58,25 @@
             </dt>
             <dd>
                 For creating and maintaining <a href="https://optc-agenda.github.io/" target="_blank">OPTC-Agenda</a>
-                which powers Nakama Network's live/upcoming events display, and for adding Nakama Network links to the
+                which helps power Nakama Network's live/upcoming events display, and for adding Nakama Network links to the
                 agenda events!
+            </dd>
+
+            <dt>
+                <a href="https://www.reddit.com/user/zl1814" target="_blank">zl1814</a>
+            </dt>
+            <dd>
+                For creating and maintaining <a href="https://lukforce.bitbucket.io/optc-cal/" target="_blank">OPTC Voyage Log</a>
+                which also helps power Nakama Network's live/upcoming events display, and for adding Nakama Network links to the
+                agenda events!
+            </dd>
+
+            <dt>
+                <a href="https://www.reddit.com/user/senji89" target="_blank">Senji89</a>
+            </dt>
+            <dd>
+                For creating and maintaining <a href="https://optcfp.herokuapp.com/" target="_blank">OPTC-FP</a> which
+                we hope to collaborate with real soon!
             </dd>
         </dl>
     </div>
