Adding commentary tools.

--- a/Source/TreasureGuide.Web/src/views/teams/detail.html
+++ b/Source/TreasureGuide.Web/src/views/teams/detail.html
@@ -87,6 +87,10 @@
                 </div>
             </div>
         </div>
+        <hr />
+        <div class="row">
+            <team-comments team.bind="team"></team-comments>
+        </div>
         <div class="row" if.bind="similar.length > 0">
             <hr />
             <h4>Similar Teams</h4>
