--- a/Source/TreasureGuide.Web/src/css/teams.scss
+++ b/Source/TreasureGuide.Web/src/css/teams.scss
@@ -685,3 +685,24 @@ team-box {
     bottom: 16px;
     font-size: 1.2em;
 }
+
+.comment-area {
+    background-color: $background-color;
+    border: 1px solid $grey-color;
+    border-radius: 20px;
+    margin: 10px;
+    padding: 0 10px;
+
+    .comment-collection {
+        font-size: small;
+
+        .comment {
+            background-color: $background-color;
+            border: 1px solid $grey-color;
+            border-radius: 20px;
+            margin: 10px;
+            padding: 20px;
+            padding-bottom: 0;
+        }
+    }
+}
