Adding comment admin area.

--- a/Source/TreasureGuide.Web/src/views/admin/index.html
+++ b/Source/TreasureGuide.Web/src/views/admin/index.html
@@ -1,5 +1,8 @@
 ﻿<template>
     <h1>Admin</h1>
+    <a route-href="route: commentAdmin">
+        Comment Dashboard
+    </a>
     <h2>Tools</h2>
     <div class="row">
         <div class="col m6">
