[70] Fixing floating twitter button.

--- a/Source/TreasureGuide.Web/src/css/forms.scss
+++ b/Source/TreasureGuide.Web/src/css/forms.scss
@@ -113,6 +113,11 @@ markdown.preview {
         -ms-transform: translateY(-50%);
         transform: translateY(-50%);
     }
+
+    .button._large{
+        max-height: 50px !important;
+        min-height: 50px !important;
+    }
 }
 
 .bit-button {
