[71] Showing separate edited and submitted dates for team stubb.

--- a/Source/TreasureGuide.Web/src/css/teams.scss
+++ b/Source/TreasureGuide.Web/src/css/teams.scss
@@ -716,5 +716,9 @@ team-box {
                 background-color: lighten($warning-color, 50);
             }
         }
+
+        .comment-collection {
+            padding-left: 25px;
+        }
     }
 }
