--- a/Source/TreasureGuide.Web/src/views/teams/index.html
+++ b/Source/TreasureGuide.Web/src/views/teams/index.html
@@ -16,7 +16,7 @@
     <loading-area if.bind="loading"></loading-area>
     <div if.bind="!loading">
         <div class="row">
-            <search-pager search-model.bind="searchModel"></search-pager>
+            <search-pager search-model.bind="searchModel" error.bind="error"></search-pager>
         </div>
         <div class="row team-collection" if.bind="teams.length > 0">
             <div class=" col d6" repeat.for="team of teams">
