--- a/Source/TreasureGuide.Web/src/css/site.scss
+++ b/Source/TreasureGuide.Web/src/css/site.scss
@@ -218,8 +218,17 @@ iframe {
     }
 }
 
+.logo-hat {
+    position: absolute;
+    margin-top: -14px;
+    margin-left: -7px;
+    pointer-events: none;
+    width: 28px;
+    image-rendering: pixelated;
+}
+
 .beta {
-    @extend ._warningLightText;
+    @extend ._successLightText;
     position: absolute;
     font-weight: bolder;
     margin-left: -24px;
