--- a/Source/NakamaNetwork.Web/Views/Shared/Error.cshtml
+++ b/Source/NakamaNetwork.Web/Views/Shared/Error.cshtml
@@ -1,4 +1,5 @@
-﻿@model ErrorViewModel
+﻿@using NakamaNetwork.Web.Models
+@model NakamaNetwork.Web.Models.ErrorViewModel
 @{
     ViewData["Title"] = "Error";
 }
