--- a/Source/TreasureGuide.Web/Views/Shared/_Layout.cshtml
+++ b/Source/TreasureGuide.Web/Views/Shared/_Layout.cshtml
@@ -4,14 +4,9 @@
 <head>
     <title>Login | Nakama Network</title>
     @{ Html.RenderPartial("_HeaderPartial"); }
-    <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
-            crossorigin="anonymous"
-            integrity="sha384-K+ctZQ+LL8q6tP7I94W+qzQsfRV2a+AfHIi9k8z8l9ggpc8X+Ytst4yBo/hH+8Fk">
-    </script>
 </head>
 <body>
     @{ Html.RenderPartial("_CssPartial"); }
-    @RenderSection("Scripts", required: false)
 
     <div class="login-wrapper">
         <div class="container">
@@ -20,5 +15,20 @@
             </div>
         </div>
     </div>
+	
+    <environment include="Development">
+        <script src="~/lib/jquery/dist/jquery.js"></script>
+    </environment>
+    <environment exclude="Development">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"
+                asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
+                asp-fallback-test="window.jQuery"
+                crossorigin="anonymous"
+                integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=">
+        </script>
+    </environment>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+
+    @RenderSection("Scripts", required: false)
 </body>
 </html>
