--- a/Source/TreasureGuide.Web/src/css/teams.scss
+++ b/Source/TreasureGuide.Web/src/css/teams.scss
@@ -172,12 +172,22 @@ unit-display {
             vertical-align: middle;
             text-align: center;
             top: 50%;
+            line-height: 0;
             transform: translateY(-50%);
             -webkit-transform: translateY(-50%);
 
             img {
-                width: 70%;
-                height: 70%;
+                width: 40%;
+                height: 40%;
+                margin: -5px;
+            }
+
+            &.generic-1 {
+                img {
+                    width: 70%;
+                    height: 70%;
+                    margin: auto;
+                }
             }
         }
 
