--- a/Source/TreasureGuide.Web/src/css/site.scss
+++ b/Source/TreasureGuide.Web/src/css/site.scss
@@ -92,6 +92,7 @@ ux-dialog-container {
     }
 
     ux-dialog {
+        background-color: $background-color;
         width: 100%;
 
         &.small {
