--- a/Source/TreasureGuide.Web/src/css/colors.scss
+++ b/Source/TreasureGuide.Web/src/css/colors.scss
@@ -1,8 +1,7 @@
 @import "_variables.scss";
 
 // Colors
-$white-color: #FFFFFF;
-$background-color: #FFFFFF;
+$white-color: #FFF;
 $primary-color: #0B6C6C;
 $light-color: #9E9E9E;
 $dark-color: #585858;
@@ -12,10 +11,13 @@ $warning-color: #B45C13;
 $active-color: #6E6E6E;
 $info-color: #183579;
 $black-color: #000000;
-$grey-color: #D1D1D1;
+$grey-color: #FFF;
 $donorStart-color: #B41313;
 $donorEnd-color: #B45C13;
 $invasion-color: darken($danger-color,5%);
+
+$background-color: $black-color;
+$font-color: $white-color;
 
 $str-color: #FF3333;
 $dex-color: #19A347;
@@ -25,11 +27,13 @@ $int-color: #AC30D6;
 $meat-color: #996633;
 
 body {
+    color: $font-color;
     background-color: $background-color;
 }
 
 @mixin color($name, $color) {
     $dark: darken($color, 10%);
+    $light: lighten($color, 10%);
 
     $text: #aaa;
 
@@ -56,7 +60,7 @@ body {
     }
 
     ._#{$name}Text {
-        color: $dark;
+        color: $light;
     }
 }
 
