--- a/Source/TreasureGuide.Web/src/css/colors.scss
+++ b/Source/TreasureGuide.Web/src/css/colors.scss
@@ -16,7 +16,7 @@ $donorStart-color: #B41313;
 $donorEnd-color: #B45C13;
 $invasion-color: darken($danger-color,5%);
 
-$background-color: $black-color;
+$background-color: lighten($black-color, 10%);
 $font-color: $white-color;
 
 $str-color: #FF3333;
